--- a/Computo 3/Semana 15/s15/app1/templates/camisas.html
+++ b/Computo 3/Semana 15/s15/app1/templates/camisas.html
@@ -1,6 +1,13 @@
-{%block title%} Camisas {%endblock%}
-
-{%block contenido%}
-    <h1>Categoria: Camisas</h1>
-    <img src="" alt="">
-{%endblock%}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Camisas</title>
+</head>
+<body>
+    <h1>Categoría: Camisas</h1>
+    <img src="{%static 'camisa.jpeg'%}" alt=""
+    style="height: 200px;">
+</body>
+</html>
