--- a/Computo 3/Semana 15/s15/app1/templates/form.html
+++ b/Computo 3/Semana 15/s15/app1/templates/form.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form method="POST">
+    <form method="post">
         {%csrf_token%}
         <button type="submit">Click</button>
     </form>
