--- a/Computo 3/Semana 15/s15/app1/templates/home.html
+++ b/Computo 3/Semana 15/s15/app1/templates/home.html
@@ -1,6 +1,25 @@
-{%extends 'base.html'%}
-{%block titulo%} Home {%endblock%}
-
-{%block contenido%}
-<h1>Bienvenidos a la tienda</h1>
-{%endblock%}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio</title>
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md">
+                <h1>Bienvenidos a la tienda</h1>
+            </div>
+        </div>
+        <div class="row" style="background-color: black;">
+            <div class="col-md-6">
+                <form action="/camisas/">
+                    <button><a href="{%url 'camisas'%}">Ver las camisas</a></button>
+                </form>
+            </div>
+        </div>
+    </div>
+</form>
+</body>
+</html>
